--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,15 +46,17 @@ header {
 }
 
 footer {
-    padding: 30px 0;
-    clear: both;
-    font-size: 16px;
-    font-style: bold;
-    color: #fff;
-    color: #ccc;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #666666;
+    height: 80px;
+    border-top: 10px solid #4aaaa5;
     text-align: center;
-    background: #666;
-    border-top: 8px solid #4aaaa5;
+    padding-top: 10px;
+    color: #fff;
+    font-size: 18px;
 }
 
 .profile-image {
