--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,11 +17,16 @@ body {
     clear: both;
 }
 
-h1, h2, h3, p {
+h1,
+h2,
+h3,
+p {
     margin-bottom: 20px;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-weight: 700;
     color: #4aaaa5;
@@ -51,12 +56,13 @@ footer {
     bottom: 0;
     left: 0;
     background-color: #666666;
-    height: 80px;
+    height: 70px;
     border-top: 10px solid #4aaaa5;
     text-align: center;
     padding-top: 10px;
     color: #fff;
     font-size: 18px;
+    padding-top: 10px;
 }
 
 .profile-image {
@@ -67,7 +73,7 @@ footer {
     margin-right: 25px;
 }
 
-#head-name{
+#head-name {
     float: left;
     width: 250px;
     height: 60px;
@@ -122,12 +128,17 @@ nav a:first-child {
     margin-bottom: 10px;
 }
 
-label, input[type=text], input[type=email], textarea {
+label,
+input[type=text],
+input[type=email],
+textarea {
     display: block;
     width: 100%;
 }
 
-input[type=text], input[type=email], textarea {
+input[type=text],
+input[type=email],
+textarea {
     height: 35px;
     padding: 0 10px;
     font-size: 14px;
@@ -145,4 +156,45 @@ input[type=submit] {
     cursor: pointer;
     background: #4aaaa5;
     border: 0 none;
+}
+
+.work {
+    position: relative;
+    float: left;
+    width: 275px;
+    margin: 20px 0 20px;
+    overflow: auto;
+}
+
+.work:nth-child(even) {
+    margin-right: 40px;
+}
+
+.work img {
+    width: 100%;
+    border: 0 none;
+    opacity: 0.8;
+}
+
+.work h3 {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 0;
+    font-weight: 300;
+    line-height: 30px;
+    color: #fff;
+    text-align: center;
+    background: #4aaaa5;
+    border-bottom: 0;
+}
+
+/* CSS Animations */
+.circle:hover {
+    border-radius: 50%;
+}
+
+.border:hover {
+    box-shadow: inset 0 0 0 35px #53a7ea;
 }
